font weight bold on about page

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -84,6 +84,9 @@ $fourth:#ffc8b4;
     margin-right: 3rem;
     margin-top: 2rem;
     margin-bottom: -8rem;
+    h1{
+        font-weight:600;
+    }
     }
     .Jumbotron{
     background-size: cover;
