--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -4,108 +4,42 @@
 }
 
 .image-container img {
-  width: 100%;
-  max-width: 510px;
-  max-height: 400px;
+  /* width: 100%; */
+  width: 410px;
+  height: 300px;
 }
 
 .product-details .product-info h1 {
   display: inline-block;
-  font-size: 44px;
+  font-size: 0.8rem;
+}
+
+.productmakemiles h4 {
+  font-size: 1.1rem;
+}
+
+.image-container h4 {
+  font-size: 1.1rem;
 }
 
 .image-container {
   position: relative;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
+
 }
 
-  .image-container {
-    position: relative;
-
-  }
-  
-  span.purchasedBox {
-    width: 177px;
-    background-color: #fe7f50;
-    color: white;
-    font-weight: 600;
-    text-align: center;
-    padding: 20px 40px;
-    margin-left: 8rem;
-    position: absolute;
-    top: 150px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  span.notPurchased {
-    visibility: hidden;
-  }
-  
-  span.purchased {
-    visibility: visible;
-  }
-
-  .soldBox{
-    width:100%;
-    height:100%
-  }
-
-  span.soldBox {
-    background-color: rgba(0, 0, 0, 0.548);
-    color: white;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    padding: 30%;
-    position: absolute;
-  }
-
-  span.notSold {
-    visibility: hidden;
-  }
-  span.sold {
-    visibility: visible;
-  }
-  
-  button.isSold{
-    display:none
-  }
-  
-  span.discountTag {
-    position: absolute;
-    top: 30px;
-    left: 10%;
-    height: 50px;
-    width: 50px;
-    background-color: #fe7f50;
-    border-radius: 50%;
-    color: white;
-    text-align: center;
-    padding: 12px 5px;
-    font-weight: 600;
-    margin-left: 1.3rem;
-  }
-  
-  span.isdiscount {
-    visibility: visible;
-  }
-  
-  span.undiscount {
-    visibility: hidden;
-  }
-  
-  .product-details .product-heading {
-    font-size: 1.1rem;
-    color: #000000;
-  }
-  
-  .product-details .details1 {
-    display: flex;
-    padding-top:0.5rem;
-  }
+span.purchasedBox {
+  width: 177px;
+  background-color: #fe7f50;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  padding: 20px 40px;
+  margin-left: 8rem;
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 span.notPurchased {
   visibility: hidden;
@@ -113,6 +47,32 @@ span.notPurchased {
 
 span.purchased {
   visibility: visible;
+}
+
+.soldBox{
+  width:100%;
+  height:100%
+}
+
+span.soldBox {
+  background-color: rgba(0, 0, 0, 0.548);
+  color: white;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  padding: 30%;
+  position: absolute;
+}
+
+span.notSold {
+  visibility: hidden;
+}
+span.sold {
+  visibility: visible;
+}
+
+button.isSold{
+  display:none
 }
 
 span.discountTag {
@@ -127,6 +87,7 @@ span.discountTag {
   text-align: center;
   padding: 12px 5px;
   font-weight: 600;
+  margin-left: 1.3rem;
 }
 
 span.isdiscount {
@@ -138,7 +99,7 @@ span.undiscount {
 }
 
 .product-details .product-heading {
-  font-size: 44px;
+  font-size: 1.1rem;
   color: #000000;
 }
 
@@ -156,7 +117,7 @@ span.undiscount {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 100;
 }
 
@@ -166,30 +127,32 @@ span.undiscount {
 }
 
 .product-details .product-makemiles h4 {
-  font-size: 29px;
+  font-size: 1.3rem;
 }
 
 .product-details .product-city-year h6 {
-  font-size: 18px;
+  font-size: 1.3rem;
 }
 
 .product-details .product-info {
   display: inline-block;
     margin-bottom: 0px;
-  font-size: 37px;
+  font-size: 1.1rem;
   color: #000000;
 }
 
 .product-details p {
-  font-size: 20px;
+  font-size: 1.1rem;
   color: #707070;
   max-width: 920px;
   text-align: left;
 }
 
 .product-details .product-price {
-  font-size: 30px;
-  margin-right: 30px;
+  font-size: 1.1rem;
+  margin-right: 18px;
+  font-weight: 500;
+  font-family: 'Roboto Condensed';
 }
 
 .product-details button {
@@ -201,24 +164,80 @@ span.undiscount {
 
 .product-details img {
   margin-top: -15px;
-  width: 44px;
-  height: 40px;
+  width: 36px;
+  height: 31px;
 }
 
 .h1Carousel {
   margin-left: 2rem;
   margin-top: 2rem;
+  font-size: 1.4rem;
+}
+
+.formH4 {
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.subscribe {
+  text-align: center;
+  margin-bottom: 7rem;
+}
+
+Form input[type="text"] {
+  padding-top: 7px;
+  padding-right: 0px;
+  margin-right: 1.5rem;
+  border: 1px solid #fe7f50;
+  border-radius: 4px;
+}
+
+Form button {
+  border: 1px solid #fe7f50;
+  border-radius: 4px;
+  background-color: #fe7f50;
+  color: #ffffff;
+  padding: 7px 10px;
+}
+
+/* Form .inputEmail {
+  padding-right: 0px;
+  margin-right: 2rem;
+  border: 1px solid #fe7f50;
+  border-radius: 15px;
+} */
+
+.check {
+  width: 15px;
+  height: 20px;
+  margin-right: 0.5rem;
+}
+
+.top1, .top2, .top3 {
+  display: flex;
+  align-content:flex-start;
+  /* flex-direction: column; */
+}
+
+.top1 {
+  margin-top: 2rem;
+}
+
+.top1 h4 {
+  font-size: 1.1rem;
+}
+
+.top2 h4 {
+  font-size: 1.1rem;
+}
+
+.top3 h4 {
+  font-size: 1.1rem;
 }
 
 .carousel {
-  display: flex;
-  flex-direction: column;
-}
-
-.check {
-  width: 30px;
-  height: 26px;
-}
+  margin-top: 1rem;
+} 
 
 @media (max-width: 800px) {
 
@@ -227,8 +246,13 @@ span.undiscount {
   }
 
   .rowContainer {
-    justify-content: center;
-    align-items: center;
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+  }
+
+  .colContanier {
+    padding-right: 0px;
   }
 
   .product-details {
