--- a/src/css/PreventPurchase.module.css
+++ b/src/css/PreventPurchase.module.css
@@ -1,9 +1,10 @@
 .loginErrorBox {
     position: fixed;
+    top: 0;
+    left: 0;
     background-color: #141a1ae6;
-    width: 100%;
-    height: 100%;
-    text-align: center;
+    height: 100%; 
+    width: 100%;   
 }
 
 .messageBox {
@@ -13,29 +14,42 @@
     justify-content: center;
     margin: 20% auto 0 auto;
     padding: 20px 20px;
-    width: 40%;
-    height: 30%;
+    width: 14rem;
     border-radius: 2px;
 }
 
 .messageBox img {
     align-self: center;
-    width: 80%;
+    max-width: 10rem;
 }
 
 .messageBox span {
-    margin: 15px 0 15px 0;
-    font-size: 14px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.messageBox span:last-of-type::before {
+    content: " ";
+    display: block;
+    background-color: white;
+    width: 100%;
+    height: 1px;
+    margin-bottom: 10px;
+}
+
+.messageBox span:last-of-type {
+    margin-top: 10px;
 }
 
 .yesButton {
+    margin-top: 20px;
     align-self: center;
     background-color: #FE7F50;
     color: white;
     padding: 6px 40px;
-    width: 50%;
     border: 1px solid #FE7F50;
     border-radius: 2px;
+    width: 12rem;
     transition: .3s;
 }
 
