--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -1,5 +1,5 @@
 .product-page {
-  margin: 50px auto 0 auto;
+  margin: 0 auto 0 auto;
   width: 800px;
 }
 
@@ -63,7 +63,7 @@ span.purchased {
 span.soldBox {
   background-color: rgba(0, 0, 0, 0.548);
   color: white;
-  font-size: 2rem;
+  font-size: 2em;
   font-weight: 600;
   text-align: center;
   padding: 30%;
@@ -263,10 +263,6 @@ Form button {
     padding-right: 0px;
   }
 
-  .product-details {
-    margin-top: 50px;
-  }
-  
 .product-details .details1 {
     display: flex;
     justify-content: space-between;
