--- a/src/css/Footer.module.css
+++ b/src/css/Footer.module.css
@@ -1,10 +1,10 @@
-.footernormal{
+/* .footernormal{
     position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: 1030; 
-} 
+}  */
 .sticky .footernormal{
     position: -webkit-sticky; 
     position: sticky;
