--- a/src/css/Sort.module.css
+++ b/src/css/Sort.module.css
@@ -3,6 +3,7 @@
   padding-bottom: 9.5px;
   padding-left: 6px;
   color:#707070;
+  background-color: white;
   border: 0px;
   border-right: gray 0.5px solid;
   width:7rem;
