--- a/src/css/login.module.css
+++ b/src/css/login.module.css
@@ -19,6 +19,9 @@
 }
 
   /* LoginPage.js style*/
+.containerStyle{
+    min-height: 75vh;
+}
 .toggleText{
     cursor: pointer;
     text-align: center;
