--- a/src/css/OrderHistory.module.css
+++ b/src/css/OrderHistory.module.css
@@ -12,7 +12,8 @@
 }
 
 .box2 {
-  margin-bottom: 51rem;
+  min-height: 80vh;
+  /* margin-bottom: 51rem; */
   /* border: 1px solid lightgrey;
   padding: 25px;
   margin-left: 1rem;
@@ -26,7 +27,7 @@
   margin-left: 1rem;
   margin-right: 1rem;
   margin-top: 3rem;
-  /* margin-bottom: 20rem; */
+  margin-bottom: 2rem;
 }
 
 .details {
